--- a/contato/index.html
+++ b/contato/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - Ternarius</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
     <!-- Header -->
@@ -12,13 +12,18 @@
         <div class="container">
             <div class="logo">
                 <h1>Ternarius</h1>
-                <p class="tagline">Açaí e Picolés Artesanais</p>
+                <p class="tagline">Açaí e Cremes Artesanais</p>
             </div>
+            <button class="mobile-menu-toggle" aria-label="Menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <nav class="nav">
                 <ul>
-                    <li><a href="index.html">Início</a></li>
-                    <li><a href="products.html">Produtos</a></li>
-                    <li><a href="contact.html" class="active">Contato</a></li>
+                    <li><a href="/">Início</a></li>
+                    <li><a href="/produtos">Produtos</a></li>
+                    <li><a href="/contato" class="active">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -150,14 +155,14 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Ternarius</h3>
-                    <p>Açaí e Picolés Artesanais</p>
+                    <p>Açaí e Cremes Artesanais</p>
                 </div>
                 <div class="footer-section">
                     <h4>Links Rápidos</h4>
                     <ul>
-                        <li><a href="index.html">Início</a></li>
-                        <li><a href="products.html">Produtos</a></li>
-                        <li><a href="contact.html">Contato</a></li>
+                        <li><a href="/">Início</a></li>
+                        <li><a href="/produtos">Produtos</a></li>
+                        <li><a href="/contato">Contato</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -179,6 +184,6 @@
         </svg>
     </a>
 
-    <script src="script.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 </html>
